initial html in header

--- a/index.html
+++ b/index.html
@@ -8,27 +8,33 @@
 </head>
 
 <body>
-	<header class="container-fluid bg-dark p-5">
-		<div class="row centered-flex-1item">
-			<div class="col-md-10 col-lg-8">
-				<h1 class="text-white display-3 mb-0">RSS агрегатор</h1>
-				<p class="text-white lead">Начните читать RSS сегодня! Это легко, это красиво.</p>
-				<form class="text-body">
-					<div class="row space-btw-flex-hor form-floating">
-						<div class="col">
-							<input type="url" id="url-input" autofocus required aria-label="url" class="w-100 height-50" placeholder="Ссылка RSS" autocomplete="off">
-							<label for="url-input">Ссылка RSS</label>
-						</div>
-						<div class="col-auto">
-							<button type="submit" aria-label="add" class="h-100 btn btn-primary btn-lg px-sm-5">Добавить</button>
-						</div>
+	<header class="bg-dark container-fluid p-5 flex-center m-0">
+		<div class="container flex-center">
+<!-- 			<h1 class="display-3 text-white mb-0">RSS агрегатор</h1>
+			<p class="lead text-white">Начните читать RSS сегодня! Это легко, это красиво.</p>
+			<form class="form-floating">
+				<div class="row">
+					<input type="text" class="col-6">
+					<button class="col-auto">Добавить</button>
+				</div>
+			</form>	
+ -->
+ 			<div class="col-8">
+				<h1 class="display-3 text-white mb-0">RSS агрегатор</h1>
+				<p class="lead text-white">Начните читать RSS сегодня! Это легко, это красиво.</p>
+				<form class="row">
+					<div class="col-8 form-floating">
+						<input type="url" autofocus class="w-100">
+						<label for=""></label>
 					</div>
 				</form>
-				<p class="mt-2 mb-0 text-white">Пример: https://ru.hexlet.io/lessons.rss</p>
-				<p></p>
 			</div>
 		</div>
 	</header>
+	<main></main>
+	<body>
+		
+	</body>
 </body>
 
 <script>
